fixes #13